--- a/TicTacToe/Base.lproj/Main.storyboard
+++ b/TicTacToe/Base.lproj/Main.storyboard
@@ -156,7 +156,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ujp-oZ-m7U">
-                                <rect key="frame" x="161.33333333333334" y="747.66666666666663" width="67.333333333333343" height="34.333333333333371"/>
+                                <rect key="frame" x="161.33333333333334" y="697.66666666666663" width="67.333333333333343" height="34.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Reset"/>
                                 <connections>
@@ -171,12 +171,13 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Iku-At-h34" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Vjh-2u-LAj"/>
                             <constraint firstItem="JOJ-GC-yqs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aMc-Iu-2cf"/>
                             <constraint firstItem="Iku-At-h34" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.9" id="ff9-uC-50v"/>
-                            <constraint firstItem="Ujp-oZ-m7U" firstAttribute="top" secondItem="Iku-At-h34" secondAttribute="bottom" constant="150" id="frH-Kp-NwX"/>
+                            <constraint firstItem="Ujp-oZ-m7U" firstAttribute="top" secondItem="Iku-At-h34" secondAttribute="bottom" constant="100" id="frH-Kp-NwX"/>
                             <constraint firstItem="ca9-9s-uec" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="huo-KQ-bnh"/>
                             <constraint firstItem="JOJ-GC-yqs" firstAttribute="top" secondItem="ca9-9s-uec" secondAttribute="bottom" constant="20" id="r4i-rY-1DK"/>
                             <constraint firstItem="ca9-9s-uec" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="rWL-sO-ORx"/>
@@ -203,8 +204,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
